--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <section>
         <h2>Awards and Certifications</h2>
         <div class="experience-item">
-            <p>Diplomado en Tecnologías de información para la innovación y desarrollo. Universidad De Colima (2025)</p>
+            <p>Diploma in Information Technologies for Innovation and Development. University of Colima (2025)</p>
         </div>
     </section>
 
