--- a/index.html
+++ b/index.html
@@ -200,12 +200,25 @@
                     </div>
                 </section>
                 
-                <!-- Certifications Section (updated - removed View Certificate button) -->
+                <!-- Certifications Section -->
                 <section class="section-card" data-aos="fade-up">
                     <h2 class="section-title">Awards & Certifications</h2>
                     <div class="experience-item">
                         <h3 class="experience-title">Diplomado en Tecnologías de información para la innovación y desarrollo</h3>
                         <p class="text-muted">Universidad De Colima (2025)</p>
+                    </div>
+                </section>
+
+                <!-- Personal Projects Section -->
+                <section class="section-card" data-aos="fade-up">
+                    <h2 class="section-title">Personal Projects</h2>
+                    <div class="experience-item">
+                        <h3 class="experience-title">Frontend Developer</h3>
+                        <ul>
+                            <li>Developed responsive web applications using React.js and JavaScript ES6+</li>
+                            <li>Created portfolio websites</li>
+                            <li>Implemented responsive designs with CSS Grid and Flexbox</li>
+                        </ul>
                     </div>
                 </section>
             </div>
@@ -259,13 +272,13 @@
                     <div class="mb-3">
                         <h5>Network Maintenance</h5>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 70%"></div>
+                            <div class="progress-bar" role="progressbar" style="width: 65%"></div>
                         </div>
                     </div>
                     <div class="mb-3">
                         <h5>Computer Systems</h5>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 90%"></div>
+                            <div class="progress-bar" role="progressbar" style="width: 95%"></div>
                         </div>
                     </div>
                     <div class="mb-3">
@@ -311,7 +324,7 @@
         </section>
     </div>
 
-    <!-- Footer with updated social links -->
+    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="row">
