--- a/index.html
+++ b/index.html
@@ -213,10 +213,9 @@
                 <section class="section-card" data-aos="fade-up">
                     <h2 class="section-title">Personal Projects</h2>
                     <div class="experience-item">
-                        <h3 class="experience-title">Frontend Developer</h3>
+                        <h3 class="experience-title">Frontend Developer Hobbie</h3>
                         <ul>
-                            <li>Developed responsive web applications using React.js and JavaScript ES6+</li>
-                            <li>Created portfolio websites</li>
+                            <li>Developed responsive web applications with JavaScript ES6+</li>
                             <li>Implemented responsive designs with CSS Grid and Flexbox</li>
                         </ul>
                     </div>
