--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <section class="section-card" data-aos="fade-up">
                     <h2 class="section-title">Awards & Certifications</h2>
                     <div class="experience-item">
-                        <h3 class="experience-title">Diplomado en Tecnologías de información para la innovación y desarrollo</h3>
+                        <h3 class="experience-title">Diploma in Information Technologies for Innovation and Development</h3>
                         <p class="text-muted">Universidad De Colima (2025)</p>
                     </div>
                 </section>
